--- a/src/main/resources/com/fitness/fragment/report/report.fxml
+++ b/src/main/resources/com/fitness/fragment/report/report.fxml
@@ -1,8 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<fx:root type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx"
-         xmlns:fx="http://javafx.com/fxml"
-         prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
+<fx:root hgap="5.0" stylesheets="@../../style/bootstrap3.css" type="javafx.scene.layout.GridPane" vgap="5.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+    <columnConstraints>
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
+        <ColumnConstraints />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints />
+        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="200.0" prefHeight="500.0" vgrow="ALWAYS" />
+        <RowConstraints vgrow="NEVER" />
+    </rowConstraints>
+    <DatePicker fx:id="startDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+    <Label text="Մինչև" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+    <DatePicker fx:id="endDatePicker" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+    <Label styleClass="info" text="(ներառյալ)" GridPane.columnIndex="3" GridPane.rowIndex="2">
+        <GridPane.margin>
+          <Insets top="-5.0" />
+        </GridPane.margin>
+        <font>
+          <Font name="System Italic" size="9.0" />
+        </font>
+    </Label>
+    <ProgressIndicator fx:id="progressIndicator" visible="false" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+    <Button fx:id="getReportButton" mnemonicParsing="false" text="Ներկայացնել հաշվետվություն" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+    <ScrollPane hvalue="2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
+        <GridPane fx:id="salaryGridPane" hgap="5.0" vgap="5.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="700.0" prefWidth="700.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="200.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="200.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints vgrow="SOMETIMES" />
+            </rowConstraints>
+            <Label style="-fx-font-weight: bold;" text="Ծառայություն" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                <font>
+                    <Font size="19.0" />
+                </font>
+            </Label>
+            <GridPane hgap="5.0" vgap="5.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647">
+                <columnConstraints>
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                    <ColumnConstraints hgrow="SOMETIMES" />
+                </columnConstraints>
+                <rowConstraints>
+                    <RowConstraints vgrow="SOMETIMES" />
+                    <RowConstraints vgrow="SOMETIMES" />
+                </rowConstraints>
+                <Label style="-fx-font-weight: bold;" text="Ընդհանուր" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                <Label style="-fx-font-weight: bold;" text="Քանակ" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                <Label style="-fx-font-weight: bold;" text="Գումար" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            </GridPane>
+        </GridPane>
+    </ScrollPane>
+    <Button fx:id="detailButton" mnemonicParsing="false" styleClass="primary" text="Մանրամասն" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
+    <GridPane hgap="5.0" vgap="5.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+        </rowConstraints>
+        <Label text="Այցերի քանակ" />
+        <Label text="Ընդհանուր գումար" GridPane.rowIndex="1" />
+        <Label fx:id="visitsQuantityLabel" text="0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+        <Label fx:id="totalPriceLabel" text="0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+    </GridPane>
 </fx:root>
