--- a/src/main/resources/com/fitness/preload.fxml
+++ b/src/main/resources/com/fitness/preload.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
@@ -11,6 +12,6 @@
             <Image url="@assets/preload.png" />
          </image>
       </ImageView>
-      <ProgressIndicator layoutX="449.0" layoutY="274.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="117.0" prefWidth="149.0" />
+      <ProgressBar layoutX="-1.0" layoutY="390.0" prefHeight="10.0" prefWidth="600.0" style="-fx-border-image-width: 0;" />
    </children>
 </Pane>
